grammar.js
    translation_unit: $ => repeat($._context),

    _context: $ => choice(
      $.compound_statement,
      $.function_definition,
      $.object_definition,
      $._empty_declaration,
      $.type_definition,
      alias($.preproc_if_in_top_level, $.preproc_if),
      alias($.preproc_ifdef_in_top_level, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_using,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    _block_item: $ => choice(
      $.statement,
      $._empty_declaration,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    // Preprocesser

    _preproc_expression: $ => choice(
      $.identifier,
      alias($.preproc_call_expression, $.call_expression),
      $.number_literal,
      $.char_literal,
      $.preproc_defined,
      alias($.preproc_unary_expression, $.unary_expression),
      alias($.preproc_binary_expression, $.binary_expression),
      alias($.preproc_parenthesized_expression, $.parenthesized_expression),
    ),

    object_definition: $ =>  seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      field('type', $._class_definition),
      commaSep1(field('declarator', choice($._declarator, $.init_declarator))),
      ';',
    ),

    _class_definition: $ => choice(
      seq(
        optional(field('class_modifier', $.class_modifier)),
        $._class_name,
      ),
      $._gtop_class,
      $._gins_class,
      $.class_specifier,
      $.union_specifier,
      $.struct_specifier,
      $.enum_specifier,
    ),

    init_declarator: $ => choice(
      seq(
        field('declarator', $._declarator),
        '=',
        field('value', choice($.initializer_list, $.expression)),
      ),
      seq(field('declarator', $._declarator),
       '(', commaSep1($.expression), ')',),
    ),

    _declarator: $ => choice(
      $._direct_declarator,
      $.pointer_declarator,
      $.array_declarator,
      $.function_declarator,
      $.parenthesized_declarator,
    ),

    pointer_declarator: $ => prec.dynamic(1, prec.right(seq(
      choice('*', '&'),
      field('declarator', $._declarator),
    ))),

    function_declarator: $ => prec.right(1, seq(
      field('declarator', $._declarator),
      field('parameters', $.parameter_list),
    )),

    parameter_list: $ => seq(
      '(',
      optional(choice(
        seq(
          commaSep1($.parameter_declaration),
          optional(','),
          optional('...'),
        ),
        '...',
      )),
      ')',
    ),

    // Preserve unnamed parameter types instead of constructor-style arguments.
    // Keep the preference here so empty declarators retain macro error recovery.
    parameter_declaration: $ => prec.dynamic(2, choice(
      seq(
        optional(field('storage_class', 'const')),
        field('type', $._class_definition),
        optional(field('declarator', choice($._declarator, $.init_declarator)))
      ),
      seq(
        optional('const'),
        field('type', $._class_definition),
        optional(field('declarator', $.abstruct_declarator))
      ),
    )),

    function_definition: $ => seq(
      optional(field('storage_class_specifier', $.storage_class_specifier)),
      optional(field('type', $._class_definition)),
      field('declarator', $._declarator),
      field('body', $.compound_statement),
    ),

    compound_statement: $ => seq(
      '{',
      repeat($._block_item),
      '}',
    ),

    command_statement: $ => seq(
      '@',
      repeat($._command),
      ';',
    ),

    _command: $ => choice(
      $.command_script_argument,
      $.command_identifier,
      alias($.string_literal, $.command_string),
      $.integer_literal,
      $.double_literal,
      $.command_expression,
    ),

    integer_literal: _ => token(choice(
      /[0-9]+/,
      /0[xX][a-fA-F0-9]+/,
      /0[xX][a-fA-F0-9]+[LUlu]/,
    )),

    identifier: _ => /[a-zA-Z_\$][0-9a-zA-Z_\$]*/,
    command_identifier: _ => token(choice(
      /[a-zA-Z_\$\.\-][0-9a-zA-Z_\$\.\-]*([\\/][0-9a-zA-Z_\$\.\-]+)*/,
      /\/[0-9a-zA-Z_\$\.\-]+(\/[0-9a-zA-Z_\$\.\-]+)*/,
      /[a-zA-Z]:[\\/][0-9a-zA-Z_\$\.\-]+([\\/][0-9a-zA-Z_\$\.\-]+)*/,
    )),

    // Comments
    comment: _ => token(choice(
      seq('//', /(\\+(.|\r?\n)|[^\\\n])*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
    unterminated_comment: _ => token(prec(-1, seq(
      '/*',
      repeat(choice(/[^*]/, /\*+[^*/]/)),
      /\**/,
    ))),
  },
});

/**
 * @param {string} suffix
 * @param {RuleBuilder<string>} content
 * @param {number} precedence
 * @returns {RuleBuilders<string, string>}
 */
function preprocIf(suffix, content, precedence = 0) {
  /**
   * @param {GrammarSymbols<string>} $
   * @returns {ChoiceRule}
   */
  function alternativeBlock($) {
    return choice(
      suffix ? alias($['preproc_else' + suffix], $.preproc_else) : $.preproc_else,
      suffix ? alias($['preproc_elif' + suffix], $.preproc_elif) : $.preproc_elif,
      suffix ? alias($['preproc_elifdef' + suffix], $.preproc_elifdef) : $.preproc_elifdef,
    );
  }

  return {
    ['preproc_if' + suffix]: $ => prec(precedence, seq(
      preprocessor('if'),
      field('condition', $._preproc_expression),
      '\n',
      repeat(content($)),
      field('alternative', optional(alternativeBlock($))),
      preprocessor('endif'),
    )),

    ['preproc_ifdef' + suffix]: $ => prec(precedence, seq(
      choice(preprocessor('ifdef'), preprocessor('ifndef')),
      field('name', $.identifier),
      repeat(content($)),
      field('alternative', optional(alternativeBlock($))),
      preprocessor('endif'),
    )),

    ['preproc_else' + suffix]: $ => prec(precedence, seq(
      preprocessor('else'),
      repeat(content($)),
    )),

    ['preproc_elif' + suffix]: $ => prec(precedence, seq(
      preprocessor('elif'),
      field('condition', $._preproc_expression),
      '\n',
      repeat(content($)),
      field('alternative', optional(alternativeBlock($))),
    )),

    ['preproc_elifdef' + suffix]: $ => prec(precedence, seq(
      choice(preprocessor('elifdef'), preprocessor('elifndef')),
      field('name', $.identifier),
      repeat(content($)),
      field('alternative', optional(alternativeBlock($))),
    )),
  };
}

/**
 * Creates a preprocessor regex rule
 * @param {RegExp | Rule | string} command
 * @returns {AliasRule}
 */
function preprocessor(command) {
  return alias(new RegExp('#[ \t]*' + command), '#' + command);
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 * @param {Rule} rule
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more of the rules separated by a comma
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
